add support for arm64 arch

--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -43,6 +43,9 @@ jobs:
       - name: Run tests
         run: TEST_ZONE_NAME=${{ secrets.HE_ZONE }}. make test
     
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -67,6 +70,7 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
+          platforms: linux/amd64,linux/arm64
           push: ${{ github.event_name != 'pull_request' }}
           tags: |
             ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
